--- a/scss/base/_hybrid.scss
+++ b/scss/base/_hybrid.scss
@@ -132,4 +132,62 @@
             }
         }
     }
+
+    .mobile-buttons {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        z-index: 1000;
+    }
+    
+    .mobile-button {
+        flex: 1;
+        text-align: center;
+        padding: 15px;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: bold;
+    }
+    
+    .mobile-button i {
+        margin-right: 8px;
+    }
+    
+    @media (min-width: 768px) {
+        .mobile-buttons {
+            display: none;
+        }
+    }
+    
 }
+
+.mobile-buttons {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    z-index: 1000;
+}
+
+.mobile-button {
+    flex: 1;
+    text-align: center;
+    padding: 15px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.mobile-button i {
+    margin-left: 10px;
+}
+
+@media (min-width: 768px) {
+    .mobile-buttons {
+        display: none;
+    }
+}
+
