--- a/scss/base/_responsive-fonts.scss
+++ b/scss/base/_responsive-fonts.scss
@@ -44,6 +44,7 @@ h6 {
 p {
 	font-size: clamp(14px, 16px, 16px);
 	line-height: 1.8;
+	margin-bottom: 15px;
 }
 
 @media screen and (max-width: 768px) {
