--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,22 +1,23 @@
 // Import fonts
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Permanent+Marker&display=swap');
 
 // Variables
-$black: #000;
+$black: #191919;
+$off-white: #fbfff1;
 $white: #ffffff;
-$primary: #036EE3; // Blue
+$primary: #5f0041;
 $dark-blue: #0050a7;
-$secondary: #e71e25; // Red
+$secondary: #0050a7;
 $dark-gray: #363636;
 $light-gray: #f4f4f4;
-$dark-red: #6f0003;
+$dark-red: #41002d; 
 
 $footer-top-color: $white;
 $footer-bottom-color: $white;
 
 // Fonts
-$heading: 'Bebas Neue', sans-serif;
-$heading-special: 'Rock Salt', cursive;
+$heading: 'Montserrat', sans-serif;
+$heading-special: 'Permanent Marker', serif;
 $sub-heading: 'Montserrat', sans-serif;
 $body: 'Montserrat', sans-serif;
 
